# wild-engine

./: Cargo.toml  build.rs
src/: camera.rs  instance.rs  main.rs  model.rs  projection.rs  resources.rs  run.rs  shader.wgsl  state.rs
src/core/: instance.rs  light.wgsl  mod.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs  wild_engine.rs
src/core/graphics/: camera.rs  mod.rs  projection.rs
