[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = "1.0"
cgmath="0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# winit = "0.28"
# gl = "0.10.0"
